...
    return Dialog(
      child: Column(
        mainAxisSize: MainAxisSize.min,
        children: [
          ListTile(
            leading: Icon(MdiIcons.bookPlus),
            title: const Text("Create new guide"),
          ),
          Padding(
            padding: const EdgeInsets.all(16),
            child: EasterEggFieldsEditor(
              formKey: _key,
              name: _name,
...
